objects/AcctSeedERP__Material__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Comment__c</fullName>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Materials (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Materials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Materials (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Materials2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Inventory_Type__c</fullName>
        <formula>TEXT(AcctSeedERP__Product__r.AcctSeed__Inventory_Type__c )</formula>
        <label>Inventory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Lead_Time__c</fullName>
        <formula>AcctSeedERP__Product__r.AcctSeedERP__Lead_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Manufacturing_Order_Template__c</fullName>
        <formula>AcctSeedERP__Product__r.AcctSeedERP__Manufacturing_Order_Template__r.Name</formula>
        <label>Manufacturing Order Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Project_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeedERP__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Project_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>AcctSeedERP__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <summarizedField>AcctSeedERP__Manufacturing_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Manufacturing_Inventory_Movement__c.AcctSeedERP__Material__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Needed__c</fullName>
        <formula>AcctSeedERP__Project__r.AcctSeedERP__Quantity_Ordered__c * AcctSeedERP__Quantity_Per_Unit__c- AcctSeedERP__Quantity_Allocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Needed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Per_Unit__c</fullName>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Quantity_Required__c</fullName>
        <formula>AcctSeedERP__Project__r.AcctSeedERP__Quantity_Ordered__c * AcctSeedERP__Quantity_Per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity for Build</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Material</label>
    <nameField>
        <displayFormat>MAT-{00000}</displayFormat>
        <label>Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeedERP__Product_Cannot_Be_Changed_If_Allocated</fullName>
        <active>true</active>
        <description>the product cannot be changed if inventory movements have been allocated to the material</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; PRIORVALUE(AcctSeedERP__Product__c) != AcctSeedERP__Product__c &amp;&amp;  AcctSeedERP__Quantity_Allocated__c &gt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Product__c</errorDisplayField>
        <errorMessage>You cannot change the product if the quantity allocated is greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Product_Is_Required</fullName>
        <active>true</active>
        <description>product is required</description>
        <errorConditionFormula>ISBLANK(AcctSeedERP__Product__c)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Product__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Project_Is_Required</fullName>
        <active>true</active>
        <description>project is required</description>
        <errorConditionFormula>ISBLANK(AcctSeedERP__Project__c)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Project__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Quantity_Cannot_Be_Changed_If_Allocated</fullName>
        <active>true</active>
        <description>the quantity per unit cannot be changed if inventory movements have been allocated to the material</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; PRIORVALUE( AcctSeedERP__Quantity_Per_Unit__c ) != AcctSeedERP__Quantity_Per_Unit__c &amp;&amp; AcctSeedERP__Quantity_Allocated__c &gt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Quantity_Per_Unit__c</errorDisplayField>
        <errorMessage>You cannot change the quantity per unit if the quantity allocated is greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Quantity_Per_Unit_Positive_Value</fullName>
        <active>true</active>
        <description>quantity needed should not be less than zero</description>
        <errorConditionFormula>AcctSeedERP__Quantity_Per_Unit__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Quantity_Per_Unit__c</errorDisplayField>
        <errorMessage>Value must be greater than or equal to 0</errorMessage>
    </validationRules>
</CustomObject>